# MAV-VS

./: .gitignore  .gitmodules  README.md  af3_test.py  main.py  pyproject.toml  test.smi  test_api.py  test_pipeline.py  test_tournament.py
autovs/: __init__.py  af3.py  capabilities.py  cli.py  compiler.py  config.py  dag.py  db.py  docking.py  gemmi_utils.py  gromacs.py  library.py  mcp_server.py  molecule_prep.py  pdbfixer_utils.py  pipeline.py  pocket.py  preparation.py  protonation_utils.py  ranking.py  reporting.py  schemas.py  security.py  slurm_poller.py  structure_acquisition.py  tool_manager.py
autovs/planning/: __init__.py  contracts.py  errors.py  graph_builder.py  scoring.py  validator.py
config/: prompts.yaml  tools.toml
containers/: gromacs_md.def
data/libraries/: pocketxmol_87924_v1.provenance.json  pocketxmol_87924_v1.rejected.tsv  test_100.smi
docs/: tool_use_planner.md
environments/: autovs-admet.yml  autovs-core.yml
scripts/: admet_wrapper.py  build_default_library.py  diffdock_wrapper.py  render_architecture_pdf.py  smoke_target_research.py
src/: __init__.py
tests/: test_af3_gromacs_integration.py  test_artifact_contracts.py  test_compiler.py  test_dag.py  test_input_binding.py  test_library.py  test_mcp.py  test_molecule_prep_tools.py  test_pipeline_progress.py  test_pocket.py  test_preparation.py  test_ranking.py  test_schemas.py  test_state_and_security.py  test_strategy_generation.py  test_structure_acquisition.py  test_target_research.py  test_tool_use_planner.py  test_web.py
web_app/: __init__.py  pipeline_runner.py  server.py
(+41 files in other folders)
