[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "autovs-agent"
version = "0.1.0"
description = "Reproducible unattended structure-based virtual screening agent"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.0",
  "fastapi>=0.115",
  "httpx>=0.27",
  "mcp[cli]>=1.27,<2",
  "openai>=2.0",
  "pandas>=2.2",
  "psutil>=6.0",
  "pydantic>=2.10",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.18",
  "rdkit>=2025.3",
  "tenacity>=9.0",
  "uvicorn>=0.34",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.25", "playwright>=1.54"]

[project.scripts]
autovs = "autovs.cli:main"
autovs-tools-mcp = "autovs.mcp_server:main"

[tool.setuptools.packages.find]
include = ["autovs*", "web_app*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
